# tensorstore-export

./: .env.example  .gitignore  ArrowParallelWrite.md  CLAUDE.md  Dockerfile  EfficientWrites.md  LLMTestPrompt.md  README.md  ShardExportDesign.md  main.py  mcns-v0.9-grayscale-ng-specs.json  mcns-v0.9-ng-specs.json  pixi.toml  requirements.txt  ruff.toml
analysis/: v011_shard_memory.csv
braid/: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.py
braid/csrc/: Makefile  cseg_encode.c  dvid_decompress.c
braid/docs/: ARCHITECTURE.md  DVID-block-decompression.md  DVID-to-cseg-transcoder.md
braid/examples/: basic_usage.py  gcs_usage.py
braid/src/braid/: __init__.py  cseg_encoder.py  decompressor.py  exceptions.py  reader.py
braid/tests/: README.md  __init__.py  conftest.py  test_bench_decompressor.py  test_compression_layers.py  test_cseg_encode.py  test_decompressor.py  test_e2e_precomputed.py  test_go_produced_shard.py  test_integration.py  test_range_reader.py  test_reader.py  test_real_data.py
braid/tests/test_data/: 30720_24576_28672-newformat.csv  30720_24576_28672-offsets.csv  30720_24576_28672.arrow  30720_24576_28672.csv  README.md
docs/: 2026-03-27-incomplete-shard-export-analysis-1.md  2026-03-30-downres-oom-investigation.md  ArrowParallelWrite.md  CustomShardWriter.md  EfficientWrites.md  ExportObservabilityPlan.md  ExportQualityControlPlan.md  ExportShards.md  ExportShardsByDownresPlan.md  ExportShardsOptimization.md  GoogleCloudRunIssues.md  MemoryFormulaOptimization.md  PrecomputeShardOffsets.md  ShardExportDesign.md  mCNS-ExportAnalysis.md
examples/: README.md  fish2_seg_native_z_spec.json  fish2_seg_zdoubled_spec.json  mcns-export-specs.json  mcns-v0.11-export-specs.json  mcns-v0.9-ng-specs-INCORRECT-bits.json  run-all-scales.sh
notebook/: braid_testing.ipynb
scripts/: aggregate_predicted_labels.py  analyze_downres_memory.py  analyze_memory.py  analyze_v011_memory.py  bucket_utils.py  check_empty_shards.py  compute_offsets.py  create_debug_manifest.py  create_missing_manifests.py  deploy.py  deploy.sh  export.py  export_errors.py  export_status.py  find_failed_shards.py  generate_scale.py  launch_profiler.py  precompute_manifest.py  profile_shards.py  remove_empty_shards.py  setup_destination.py  validate_dvid_export.py  verify_export.py  verify_export_values.py
src/: __init__.py  export_value_verifier.py  ng_sharding.py  shard_reader.py  tensorstore_adapter.py  worker.py
tests/: conftest.py  test_export_pipeline.py  test_supervoxels_flag.py  test_verify_export_values.py  test_worker_memory.py  test_worker_shared_handle.py
