[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braid"
version = "1.0.0"
authors = [
    {name = "BRAID Development Team"},
]
description = "BRAID - A Python library for chunked segmentation data with sharded Arrow files"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["blocks", "chunks", "sharding", "segmentation", "arrow", "neuroglancer", "compression", "neuroscience"]

dependencies = [
    "numpy>=1.24.0",
    "pyarrow>=18.0.0",
    "zstandard>=0.22.0",
]

[project.optional-dependencies]
gcs = ["google-cloud-storage>=2.10.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "isort>=5.12.0",
    "flake8>=6.0",
    "mypy>=1.8.0",
]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "ipywidgets>=8.0.0",
    "gcsfs>=2024.2.0",
]

[project.urls]
Homepage = "https://github.com/JaneliaSciComp/braid"
Repository = "https://github.com/JaneliaSciComp/braid.git"
Issues = "https://github.com/JaneliaSciComp/braid/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=braid --cov-report=term-missing"